# ai_wrapper_client

./: .gitignore  README.md  pyproject.toml
client/: __init__.py  adapters.py  ai_wrapper.py  core.py  models.py
examples/: basic_usage.py  other_languages.md
