[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-wrapper-client"
version = "2.0.0"
description = "Python client for AI Wrapper API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.optional-dependencies]
langchain = [
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-classic",
    "langchainhub",
]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["client*"]
